styles/portfolio.css
:root {
  --branding-color: #000000;
  --text-font-family: "Sarabun", sans-serif;
}

body {
  background-color: black;
}

.hero {
  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/258/original/AdobeStock_789025050.jpg?1719940204");
  width: 1442px;
  height: 800px;
  margin-top: 80px;
  text-align: left;
  padding-top: 140px;
  padding-left: 50px;
  padding-right: 50px;
}

@media only screen and (max-width: 600px) {
  .hero {
    background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/131/258/original/AdobeStock_789025050.jpg?1719940204");
    width: 1442px;
    height: 800px;
    margin-top: 80px;
    text-align: left;
    padding-top: 140px;
    padding-left: 10px;
  }

  h4 {
    top: 0;
    bottom: 0;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    color: white;
    text-align: center;
    font-size: 48px;
    font-family: var(--text-font-family);
  }

  h1,
  h2,
  h3,
  h4 {
    font-size: 28px;
  }
}

h1,
h2 {
  font-size: 65px;
  color: white;
  font-family: var(--branding-color);
  font-weight: 500;
  font-style: normal;
}

h3 {
  font-size: 58px;
  color: white;
  text-align: center;
  font-family: var(--branding-color);
  padding-top: 10px;
  padding-bottom: 10px;
}

.space {
  padding: 30px 0px 0px 0px;
}

.btn.btn-branding {
  background: var(--branding-color);
  border-radius: 30px;
  color: white;
  font-size: 26px;
  width: 300px;
  height: 50px;
  font-family: var(--text-font-family);
  font-weight: 500;
  font-style: normal;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.world-clock {
  text-align: center;
  color: white;
  position: relative;
  display: flex;
}

h4 {
  top: 0;
  bottom: 0;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  color: white;
  padding: 175.5px;
  font-size: 48px;
  font-family: var(--text-font-family);
}

